package a;

public enum NomeNutrienteAdicional {
    ENXOFRE,
    CALCIO,
    NITROGENIO,
    MAGNESIO;
    
}
